projects/compiler/test/typechecker/decorators/error_too_many_args.abra
decorator Bar {
  a: String
}

@Bar("asdf", 123)
func foo() {}
